tests/golden/openshift/argocd/argocd/30_argocd/20_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-same-namespace
  name: argocd-allow-same-namespace
  namespace: syn
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-operator
  name: argocd-allow-operator
  namespace: syn
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: syn-argocd-operator
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-openshift-monitoring
  name: argocd-allow-openshift-monitoring
  namespace: syn
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
