tests/golden/openshift/argocd/argocd/30_argocd/21_ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-allow-cluster-node
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
